[package]
name = "ilp-bgmtv"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
error_set.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_repr.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
